force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/BMCServiceDesk__FieldDisplayCriteria__c.object-meta.xml
<CustomObject>
    <label>Field Display Criteria</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Display Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>