force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/fields/BMCServiceDesk__FieldInfo__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FieldInfo__c</fullName>
    <label>Field Info</label>
    <length>80</length>
    <type>Text</type>
</CustomField>