force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/fields/BMCServiceDesk__FKSSLayoutDetail__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKSSLayoutDetail__c</fullName>
    <label>Display Field Record</label>
    <referenceTo>BMCServiceDesk__SSLayoutDetail__c</referenceTo>
    <relationshipLabel>Field Display Criteria</relationshipLabel>
    <relationshipName>FieldDisplayCriteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>