force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/fields/BMCServiceDesk__Operand__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Operand__c</fullName>
    <label>Operand</label>
    <type>TextArea</type>
</CustomField>