force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/fields/BMCServiceDesk__OrderIndex__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__OrderIndex__c</fullName>
    <label>Order Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>