force-app/main/default/objects/BMCServiceDesk__FieldDisplayCriteria__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__OrderIndex__c</columns>
    <columns>BMCServiceDesk__FieldInfo__c</columns>
    <columns>BMCServiceDesk__Operand__c</columns>
    <columns>BMCServiceDesk__Operator__c</columns>
    <columns>BMCServiceDesk__GroupingOperator__c</columns>
    <columns>BMCServiceDesk__FKSSLayoutDetail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>